# metrics-cloudwatch-embedded

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check-examples.yml  check.yml  integration-test.yml
benches/: bench.rs
example/: Cargo.toml
example/src/: main.rs
examples/lambda/: Cargo.toml
examples/lambda-http/: .gitignore  Cargo.toml
examples/lambda-http/src/: main.rs
examples/lambda/src/: main.rs
integration-test/: .gitignore  Cargo.toml  samconfig.toml  template.yaml
integration-test/src/: http.rs
src/: builder.rs  collector.rs  emf.rs  lambda.rs  lib.rs  test.rs
