[package]
name = "metrics_cloudwatch_embedded"
version = "0.1.0"
authors = ["brianmorin <brianmorin@drifter.games>"]
edition = "2021"

description = "CloudWatch embedded metrics format emitter for the metrics crate"
license = "Apache-2.0"
documentation = "https://docs.rs/metrics_cloudwatch_embedded"
homepage = "https://github.com/BMorinDrifter/metrics_cloudwatch_embedded"
repository = "https://github.com/BMorinDrifter/metrics_cloudwatch_embedded"
readme = "README.md"
keywords = ["metrics", "cloudwatch", "aws"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
metrics = "0.21"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
