[package]
name = "metrics_cloudwatch_embedded"
version = "0.6.0"
authors = ["brianmorin <brianrossmorin@gmail.com>"]
edition = "2021"
rust-version = "1.81"

description = "CloudWatch embedded metrics format emitter for the metrics crate"
license = "Apache-2.0"
documentation = "https://docs.rs/metrics_cloudwatch_embedded"
homepage = "https://github.com/BMorinDrifter/metrics-cloudwatch-embedded"
repository = "https://github.com/BMorinDrifter/metrics-cloudwatch-embedded"
readme = "README.md"
keywords = ["metrics", "cloudwatch", "aws"]

[features]
default = ["lambda"]
lambda = ["dep:http", "dep:lambda_http", "dep:lambda_runtime", "dep:pin-project", "dep:tower"]

[dependencies]
http = { version = "1.0", optional = true }
lambda_http = { version = "0.14", optional = true }
lambda_runtime = { version = "0.13", optional = true }
metrics = "0.24"
pin-project = { version = "1", optional = true }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = {version = "0.5.2", optional = true }
tracing = "0.1"
futures = "0.3"
bytes = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
rusty-fork = "0.3.0"
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "json"] }

[[bench]]
name = "bench"
harness = false
