[package]
name = "metrics_cloudwatch_embedded_integration_tests"
version = "0.1.0"
authors = ["brianmorin <brianrossmorin@gmail.com>"]
edition = "2021"
description = "integration tests for the metrics_cloudwatch_embedded crate"
license = "Apache-2.0"
repository = "https://github.com/bmorin/metrics-cloudwatch-embedded"
keywords = ["metrics", "cloudwatch", "aws"]
readme = "../README.md"

[dependencies]
lambda_http = { version = "0.14", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.13"
metrics = "0.24"
metrics_cloudwatch_embedded = { path = "..", features = ["lambda"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "json"] }

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }

[[bin]]
name = "simple"
path = "src/simple.rs"

[[bin]]
name = "http"
path = "src/http.rs"