[package]
name = "lambda-http-test"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.11", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.11"
metrics = "0.22.3"
metrics_cloudwatch_embedded = { path = "../..", features = ["lambda"] }
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"